[gd_scene load_steps=7 format=3 uid="uid://cf5hhr3m44idf"]

[ext_resource type="Script" path="res://Scripts/Inventory/Inventory.gd" id="1_4jnmo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq3tl"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.207843, 0.207843, 0.207843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2bq2"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8b5sf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oajcu"]
content_margin_right = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xe8e6"]

[node name="Inventory" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -274.0
offset_right = 376.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cq3tl")
script = ExtResource("1_4jnmo")

[node name="InventoryContents" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -2

[node name="Title" type="Label" parent="InventoryContents"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "INVENTARIO"
horizontal_alignment = 1

[node name="Labels" type="HBoxContainer" parent="InventoryContents"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="ITEM" type="Label" parent="InventoryContents/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.815686, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_t2bq2")
text = "ITEM"
horizontal_alignment = 1

[node name="PESO" type="Label" parent="InventoryContents/Labels"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.815686, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_t2bq2")
text = "PESO"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="InventoryContents/Labels"]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxEmpty_8b5sf")

[node name="InventoryItems" type="Panel" parent="InventoryContents"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryContents/InventoryItems"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryContents/InventoryItems/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ItemsList" type="VBoxContainer" parent="InventoryContents/InventoryItems/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2

[node name="VScrollBar" type="VScrollBar" parent="InventoryContents/InventoryItems/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="InventoryContents"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="PanelContainer" type="PanelContainer" parent="InventoryContents/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oajcu")

[node name="PanelContainer2" type="PanelContainer" parent="InventoryContents/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oajcu")

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryContents/HBoxContainer2/PanelContainer2"]
layout_mode = 2

[node name="Label3" type="Label" parent="InventoryContents/HBoxContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " Peso total:"

[node name="Label2" type="Label" parent="InventoryContents/HBoxContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "100"
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="InventoryContents/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_xe8e6")

[connection signal="child_entered_tree" from="InventoryContents/InventoryItems/HBoxContainer/ScrollContainer/ItemsList" to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="InventoryContents/InventoryItems/HBoxContainer/ScrollContainer/ItemsList" to="." method="_on_child_exiting_tree"]
[connection signal="scrolling" from="InventoryContents/InventoryItems/HBoxContainer/VScrollBar" to="." method="_on_v_scroll_bar_scrolling"]
